# event_manager_backend

./: README.md  api.py  main.py  pyproject.toml
apis/: authentication.py  chatbot.py  user.py
db_utils/: alembic.ini  database.py  db_tabel_models.py
db_utils/alembic/: env.py
db_utils/alembic/versions/: 125121663428_add_firstname_and_lastname_columns_to_.py  5975e40d72ed_add_role_column_to_users_table.py  85c931fd47de_add_role_column_to_users_table.py  c5c968f376e9_update_event_table.py
models/: adress_model.py  authorization_model.py  database_models.py  event.py  user_model.py
queries/authorization/: authorization_queries.py
queries/user_queries/: user_queries.py
